--- a/RSJoystick/Base.lproj/LaunchScreen.storyboard
+++ b/RSJoystick/Base.lproj/LaunchScreen.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -24,7 +25,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Copyright (c) 2015 Roman Simenok. All rights reserved." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="qdI-Vy-v1t">
-                                <rect key="frame" x="80" y="571" width="441" height="21"/>
+                                <rect key="frame" x="28" y="571" width="544" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -33,11 +34,10 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="6wo-eM-8Ap" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="ANL-h4-D4U"/>
-                            <constraint firstItem="qdI-Vy-v1t" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="80" id="FwI-wt-Dw5"/>
-                            <constraint firstItem="6wo-eM-8Ap" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="204" id="Qwu-ca-ggV"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="qdI-Vy-v1t" secondAttribute="trailing" constant="8" id="Sxo-Eo-sdp"/>
                             <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="qdI-Vy-v1t" secondAttribute="bottom" constant="8" id="cFa-HT-ija"/>
-                            <constraint firstItem="qdI-Vy-v1t" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="kWT-V6-NAK"/>
                             <constraint firstItem="6wo-eM-8Ap" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="205" id="lg9-CR-kzW"/>
+                            <constraint firstItem="qdI-Vy-v1t" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="8" id="v8E-yT-NNH"/>
                         </constraints>
                     </view>
                 </viewController>
